// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pattern query tests tests for all patterns and one pattern #1 Should receive all patterns 1`] = `
Object {
  "__typename": "PaginatedPatterns",
  "items": Array [
    Object {
      "__typename": "Pattern",
      "available": true,
      "description": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Фабричний гобелен із зображенням рожевої хвильки",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Manufactured tapestry with pink wave pattern",
        },
      ],
      "handmade": false,
      "images": Object {
        "__typename": "ImageSet",
        "large": "large-pink-wave.jpg",
        "medium": "medium-pink-wave.jpg",
        "small": "small-pink-wave.jpg",
        "thumbnail": "thumbnail-pink-wave.jpg",
      },
      "material": "Cotton",
      "name": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Рожева хвилька",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Pink wave",
        },
      ],
    },
    Object {
      "__typename": "Pattern",
      "available": true,
      "description": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Фабричний гобелен із зображенням синьої хвильки",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Manufactured tapestry with blue wave pattern",
        },
      ],
      "handmade": false,
      "images": Object {
        "__typename": "ImageSet",
        "large": "large-blue-wave.jpg",
        "medium": "medium-blue-wave.jpg",
        "small": "small-blue-wave.jpg",
        "thumbnail": "thumbnail-blue-wave.jpg",
      },
      "material": "Cotton",
      "name": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Синя хвилька",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Blue wave",
        },
      ],
    },
    Object {
      "__typename": "Pattern",
      "available": true,
      "description": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Фабричний гобелен із зображенням стрілок",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Manufactured tapestry with arrow pattern",
        },
      ],
      "handmade": false,
      "images": Object {
        "__typename": "ImageSet",
        "large": "large-arrows.jpg",
        "medium": "medium-arrows.jpg",
        "small": "small-arrows.jpg",
        "thumbnail": "thumbnail-arrows.jpg",
      },
      "material": "Cotton",
      "name": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Стрілки",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Arrows",
        },
      ],
    },
    Object {
      "__typename": "Pattern",
      "available": true,
      "description": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Фабричний гобелен із синім визерунком",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Manufactured tapestry with blue pattern",
        },
      ],
      "handmade": false,
      "images": Object {
        "__typename": "ImageSet",
        "large": "large-blue.jpg",
        "medium": "medium-blue.jpg",
        "small": "small-blue.jpg",
        "thumbnail": "thumbnail-blue.jpg",
      },
      "material": "Cotton",
      "name": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Синій",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Blue",
        },
      ],
    },
    Object {
      "__typename": "Pattern",
      "available": true,
      "description": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Фабричний гобелен із чорним визерунком",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Manufactured tapestry with black pattern",
        },
      ],
      "handmade": false,
      "images": Object {
        "__typename": "ImageSet",
        "large": "large-black.jpg",
        "medium": "medium-black.jpg",
        "small": "small-black.jpg",
        "thumbnail": "thumbnail-black.jpg",
      },
      "material": "Cotton",
      "name": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Чорний",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Black",
        },
      ],
    },
    Object {
      "__typename": "Pattern",
      "available": true,
      "description": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Фабричний гобелен із червоним визерунком",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Manufactured tapestry with red pattern",
        },
      ],
      "handmade": false,
      "images": Object {
        "__typename": "ImageSet",
        "large": "large-red.jpg",
        "medium": "medium-red.jpg",
        "small": "small-red.jpg",
        "thumbnail": "thumbnail-red.jpg",
      },
      "material": "Cotton",
      "name": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Червоний",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Red",
        },
      ],
    },
    Object {
      "__typename": "Pattern",
      "available": true,
      "description": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Фабричний гобелен із зображенням вишивки",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Manufactured tapestry with embroidery pattern",
        },
      ],
      "handmade": false,
      "images": Object {
        "__typename": "ImageSet",
        "large": "large-embroidery.jpg",
        "medium": "medium-embroidery.jpg",
        "small": "small-embroidery.jpg",
        "thumbnail": "thumbnail-embroidery.jpg",
      },
      "material": "Cotton",
      "name": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Вишивка",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Embroidery",
        },
      ],
    },
    Object {
      "__typename": "Pattern",
      "available": true,
      "description": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Фабричний гобелен із зображенням оленів",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Manufactured tapestry with deer pattern",
        },
      ],
      "handmade": false,
      "images": Object {
        "__typename": "ImageSet",
        "large": "large-deers.jpg",
        "medium": "medium-deers.jpg",
        "small": "small-deers.jpg",
        "thumbnail": "thumbnail-deers.jpg",
      },
      "material": "Cotton",
      "name": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Олені",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Deers",
        },
      ],
    },
    Object {
      "__typename": "Pattern",
      "available": true,
      "description": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Фабричний гобелен із зображенням людей",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Manufactured tapestry with people pattern",
        },
      ],
      "handmade": false,
      "images": Object {
        "__typename": "ImageSet",
        "large": "large-people.jpg",
        "medium": "medium-people.jpg",
        "small": "small-people.jpg",
        "thumbnail": "thumbnail-people.jpg",
      },
      "material": "Cotton",
      "name": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Люди",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "People",
        },
      ],
    },
    Object {
      "__typename": "Pattern",
      "available": true,
      "description": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Фабричний гобелен із зображенням квітів",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Manufactured tapestry with flower pattern",
        },
      ],
      "handmade": false,
      "images": Object {
        "__typename": "ImageSet",
        "large": "large-flowers.jpg",
        "medium": "medium-flowers.jpg",
        "small": "small-flowers.jpg",
        "thumbnail": "thumbnail-flowers.jpg",
      },
      "material": "Cotton",
      "name": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Квіти",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Flowers",
        },
      ],
    },
  ],
}
`;

exports[`pattern query tests tests for all patterns and one pattern #2 Should receive one pattern 1`] = `
Object {
  "__typename": "Pattern",
  "available": true,
  "description": Array [
    Object {
      "__typename": "Language",
      "lang": "uk",
      "value": "test value",
    },
    Object {
      "__typename": "Language",
      "lang": "en",
      "value": "test value",
    },
  ],
  "handmade": false,
  "images": Object {
    "__typename": "ImageSet",
    "large": "large_335nr4j5dkebkw5cy_test.jpg",
    "medium": "medium_335nr4j5dkebkw5cy_test.jpg",
    "small": "small_335nr4j5dkebkw5cy_test.jpg",
    "thumbnail": "thumbnail_335nr4j5dkebkw5cy_test.jpg",
  },
  "material": "test",
  "name": Array [
    Object {
      "__typename": "Language",
      "lang": "uk",
      "value": "test value",
    },
    Object {
      "__typename": "Language",
      "lang": "en",
      "value": "test value",
    },
  ],
}
`;

exports[`pattern query tests tests for all patterns and one pattern pattern pagination test 1`] = `
Object {
  "__typename": "PaginatedPatterns",
  "count": 10,
  "items": Array [
    Object {
      "__typename": "Pattern",
      "available": true,
      "description": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Фабричний гобелен із зображенням рожевої хвильки",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Manufactured tapestry with pink wave pattern",
        },
      ],
      "handmade": false,
      "images": Object {
        "__typename": "ImageSet",
        "large": "large-pink-wave.jpg",
        "medium": "medium-pink-wave.jpg",
        "small": "small-pink-wave.jpg",
        "thumbnail": "thumbnail-pink-wave.jpg",
      },
      "material": "Cotton",
      "name": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Рожева хвилька",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Pink wave",
        },
      ],
    },
    Object {
      "__typename": "Pattern",
      "available": true,
      "description": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Фабричний гобелен із зображенням синьої хвильки",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Manufactured tapestry with blue wave pattern",
        },
      ],
      "handmade": false,
      "images": Object {
        "__typename": "ImageSet",
        "large": "large-blue-wave.jpg",
        "medium": "medium-blue-wave.jpg",
        "small": "small-blue-wave.jpg",
        "thumbnail": "thumbnail-blue-wave.jpg",
      },
      "material": "Cotton",
      "name": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Синя хвилька",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Blue wave",
        },
      ],
    },
    Object {
      "__typename": "Pattern",
      "available": true,
      "description": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Фабричний гобелен із зображенням стрілок",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Manufactured tapestry with arrow pattern",
        },
      ],
      "handmade": false,
      "images": Object {
        "__typename": "ImageSet",
        "large": "large-arrows.jpg",
        "medium": "medium-arrows.jpg",
        "small": "small-arrows.jpg",
        "thumbnail": "thumbnail-arrows.jpg",
      },
      "material": "Cotton",
      "name": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Стрілки",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Arrows",
        },
      ],
    },
    Object {
      "__typename": "Pattern",
      "available": true,
      "description": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Фабричний гобелен із синім визерунком",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Manufactured tapestry with blue pattern",
        },
      ],
      "handmade": false,
      "images": Object {
        "__typename": "ImageSet",
        "large": "large-blue.jpg",
        "medium": "medium-blue.jpg",
        "small": "small-blue.jpg",
        "thumbnail": "thumbnail-blue.jpg",
      },
      "material": "Cotton",
      "name": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Синій",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Blue",
        },
      ],
    },
    Object {
      "__typename": "Pattern",
      "available": true,
      "description": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Фабричний гобелен із чорним визерунком",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Manufactured tapestry with black pattern",
        },
      ],
      "handmade": false,
      "images": Object {
        "__typename": "ImageSet",
        "large": "large-black.jpg",
        "medium": "medium-black.jpg",
        "small": "small-black.jpg",
        "thumbnail": "thumbnail-black.jpg",
      },
      "material": "Cotton",
      "name": Array [
        Object {
          "__typename": "Language",
          "lang": "uk",
          "value": "Чорний",
        },
        Object {
          "__typename": "Language",
          "lang": "en",
          "value": "Black",
        },
      ],
    },
  ],
}
`;
